// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PassedChecksSection renders, not showDetails 1`] = `
<div
  className="result-section-class-name"
>
  <ResultSectionTitle
    count={2}
    outcomeType="pass"
    title="result section title"
  />
  <RuleDetailsGroup
    rules={
      Array [
        Object {},
        Object {},
      ]
    }
  />
</div>
`;

exports[`PassedChecksSection renders, with showDetails 1`] = `
<div
  className="result-section-class-name"
>
  <ResultSectionTitle
    count={2}
    outcomeType="pass"
    title="result section title"
  />
  <RuleDetailsGroup
    rules={
      Array [
        Object {},
        Object {},
      ]
    }
    showDetails={true}
  />
</div>
`;
